# digit_recognize_using_onnxruntime

./: CMakeLists.txt  README.md
cli/: recognize.c
cmake/: Findlibpng.cmake  Findonnxruntime.cmake  Findzlib.cmake
include/: num_recognizer.h
src/: num_recognizer.cpp
